--- a/package.json
+++ b/package.json
@@ -6,21 +6,64 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:e2e": "tsx scripts/e2e-media.ts",
+    "test:e2e:ui": "playwright test"
   },
   "dependencies": {
-    "next": "16.0.8",
+    "@distube/ytdl-core": "^4.16.12",
+    "@napi-rs/canvas": "^0.1.89",
+    "@napi-rs/canvas-win32-x64-msvc": "^0.1.89",
+    "@next/swc-win32-x64-msvc": "^16.0.8",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@supabase/auth-js": "^2.89.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.47.10",
+    "@tailwindcss/oxide-win32-x64-msvc": "^4.1.17",
+    "@types/react-scroll": "^1.8.10",
+    "cheerio": "^1.0.0-rc.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "framer-motion": "^12.29.2",
+    "jassub": "^2.3.3",
+    "lightningcss-win32-x64-msvc": "^1.30.2",
+    "lucide-react": "^0.563.0",
+    "mp4box": "^2.3.0",
+    "next": "^16.0.10",
+    "openai": "^4.75.2",
+    "pixi.js": "^8.15.0",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-resizable-panels": "^2.1.7",
+    "react-scroll": "^1.9.3",
+    "tailwind-merge": "^3.4.0",
+    "tus-js-client": "^4.3.1",
+    "uuid": "^13.0.0",
+    "youtubei.js": "^16.0.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.1",
     "@tailwindcss/postcss": "^4",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
+    "supabase": "^2.65.7",
     "tailwindcss": "^4",
+    "tsx": "^4.15.7",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
