--- a/.env.local.example
+++ b/.env.local.example
@@ -13,3 +13,9 @@ WHISPER_MODEL=whisper-1
 TRANSLATION_PROVIDER=openai
 TRANSLATION_MODEL=gpt-4o-mini
 YOUTUBE_COOKIE=VISITOR_INFO1_LIVE=XKQJTIOuW2I; YSC=8FH3LQ805So
+
+# Polar (International Payments)
+POLAR_ACCESS_TOKEN=replace-with-polar-access-token
+POLAR_ORGANIZATION_ID=replace-with-polar-org-id
+POLAR_WEBHOOK_SECRET=replace-with-polar-webhook-secret
+NEXT_PUBLIC_POLAR_CHECKOUT_URL=https://checkout.polar.sh
